Criar endpoint para listar notificações de um usuário